fixed login page horizontal scrolling on mobile

--- a/client/src/views/login/LoginView.css
+++ b/client/src/views/login/LoginView.css
@@ -1,5 +1,12 @@
+.login-page{
+  width: 100%;
+  overflow-x: hidden;
+}
+
 
 .login-grid-container{
+    width: 100%;
+    overflow-x: hidden;
     display: grid;
     grid-template-columns: 1.5fr 1fr;
     height: 100vh;
